Update dependencies and fix subset detection in findAllScheduleCombinations

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.8.1",
     "html-table-to-json": "^1.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "next": "14.0.4",
+    "npm": "^10.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -29,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.8.0",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
